# window-cleaning-2026

./: .gitignore  .npmignore  CONTRIBUTING.md  DOCKERHUB_README.md  Dockerfile  MANIFEST.in  README-homeowners.md  README.md  composer.json  package.json  pyproject.toml
datasets/: commercial_window_cleaning_costs_northern_ontario.csv  generate_dataset.py
docs/: about.rst  api-reference.rst  calculation-model.rst  conf.py  getting-started.rst  index.rst  northern-ontario-guide.rst
engines/elixir/: README.md  mix.exs
engines/elixir/lib/: window_cleaning.ex
engines/elixir/test/: window_cleaning_test.exs
engines/java/: pom.xml
engines/java/src/main/java/io/github/davecookvectorlabs/windowcleaning/: AccessMethod.java  CleaningEstimate.java  CleaningFrequency.java  CleaningRequest.java  ServiceType.java  WindowCleaningCalculator.java  WindowType.java
engines/java/src/test/java/io/github/davecookvectorlabs/windowcleaning/: WindowCleaningCalculatorTest.java
engines/php/: composer.json
engines/php/src/: AccessMethod.php  Calculator.php  CleaningEstimate.php  CleaningFrequency.php  ServiceType.php  WindowType.php
engines/php/tests/: CalculatorTest.php
engines/python/: engine.py  models.py
engines/python/tests/: test_engine.py
engines/ruby/: LICENSE  README.md  window_cleaning_2026.gemspec
engines/ruby/lib/: window_cleaning_2026.rb
engines/ruby/lib/window_cleaning_2026/: calculator.rb  version.rb
engines/ruby/test/: test_calculator.rb
engines/rust/: Cargo.toml
engines/rust/src/: engine.rs  main.rs  models.rs
engines/rust/tests/: engine_test.rs
kaggle/: commercial_window_cleaning_market_analysis_northern_ontario_2026.ipynb  kernel-metadata.json
notebooks/: commercial_window_cleaning_market_analysis_northern_ontario_2026.ipynb
observable/: README.md
public/: calculate.php  index.php
public/assets/: calculator.js  style.css
