[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "window-cleaning-2026"
version = "0.1.0"
description = "A free, open-source window cleaning cost calculator for commercial facility managers, property managers, and building operations teams."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Binx Professional Cleaning"}
]
keywords = ["window-cleaning", "cost-calculator", "facility-management", "commercial-cleaning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
]

[project.urls]
Homepage = "https://github.com/DaveCookVectorLabs/window-cleaning-2026"
Repository = "https://github.com/DaveCookVectorLabs/window-cleaning-2026"
Issues = "https://github.com/DaveCookVectorLabs/window-cleaning-2026/issues"

[tool.setuptools.packages.find]
where = ["engines/python"]
include = ["*"]
