[package]
name = "window-cleaning-engine"
version = "0.1.0"
edition = "2021"
description = "A commercial window cleaning cost calculation engine for facility managers in Northern Ontario. Built by Binx Professional Cleaning."
license = "MIT"
repository = "https://github.com/DaveCookVectorLabs/window-cleaning-2026"
homepage = "https://www.binx.ca/"
keywords = ["window-cleaning", "cost-calculator", "facility-management", "commercial-cleaning"]
categories = ["web-programming::http-server"]
readme = "../../README.md"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[[test]]
name = "engine_test"
path = "tests/engine_test.rs"
